# TOM-CO-TCG-BOT

./: .gitignore  BILAN_TECHNIQUE_FNAC.md  README.md  debug_dom.py  index.html  launch_fnac_chrome.sh  main.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: vercel-deploy-interface.yml
accounts/: __init__.py  account_generator.py  account_manager.py  cli.py  cookie_store.py  email_generator.py  fnac_session.py  session_store.py
bots/: __init__.py  base_bot.py  session_manager.py  strategy.py  worker.py
config/: limits.yaml  settings.yaml  sites.yaml
docs/: FNAC.md
execution/: __init__.py  buyer.py  cart.py  checkout.py  playwright_driver.py
infra/: __init__.py  browser_manager.py  ip_allocator.py  proxy_manager.py  rate_limiter.py  server_config.py
orchestrator/: __init__.py  bot_manager.py  config_parser.py  scheduler.py  state_manager.py
payment/: __init__.py  payment_session.py  vcc_manager.py
payment/providers/: __init__.py
public/: index.html
scrapers/: __init__.py  api_scraper.py  base_scraper.py  browser_scraper.py  keyword_engine.py  product_match.py
scratch/: debug_fnac_scraper.py
scripts/: copy-static.mjs  discover_fnac_endpoints.py
security/: __init__.py  captcha_solver.py  fingerprint.py  humanizer.py
sites/: __init__.py  base.py
sites/amazon/: __init__.py  buyer.py  config.py  (+1 more)
src/: App.tsx  index.css  main.tsx
tests/: __init__.py  test_fnac_logic.py  test_fnac_response_and_capture.py  test_product_match.py  test_session_store.py  test_skeleton_imports.py
utils/: __init__.py  metrics.py  retry.py
(+40 files in other folders)
